--- a/src/components/species/species.css
+++ b/src/components/species/species.css
@@ -58,6 +58,7 @@
 
 .species-details-description {
 	padding: 0 1.5em;
+	white-space: pre-line;
 }
 
 .species-details-info {
